# mumps-build

./: CMakeLists.txt  CMakePresets.json  LICENSE  NOTICES  README.md  codemeta.json  options.cmake
cmake/: Config.cmake.in  FindLAPACK.cmake  FindMETIS.cmake  FindMUMPS.cmake  FindSCALAPACK.cmake  FindScotch.cmake  compilers.cmake  gemmt.cmake  install.cmake  lapack.cmake  launcher.cmake  libraries.json  libseq.cmake  matlab.cmake  mumps.cmake  mumps_io.h  mumps_patch.cmake  mumps_src.cmake  options.cmake  patch_mumps_io.py  pord.cmake  scalapack.cmake  summary.cmake
cmake/Modules/: FindLAPACK.cmake  FindMETIS.cmake  FindSCALAPACK.cmake
cmake/presets/: README.md  base.json  win-ninja.json
example/: CMakeLists.txt  run_ex.cmake  z_example.c
scripts/: CMakeLists.txt  test_mumps_versions.cmake
src/: CMakeLists.txt
test/: CMakeLists.txt  amd_mumps.cpp  d_example.cpp  simple.c
tests/: CMakeLists.txt  amd_mumps.cpp  simple.c
